objects/Registration__c/Registration__c.object-meta.xml
<CustomObject>
    <description>Represents an attendee registration booking for an event, linking the attendee to an event and selected ticket type.</description>
    <label>Registration</label>
    <nameField>
        <displayFormat>REG-{00000}</displayFormat>
        <label>Registration Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>