objects/Registration__c/fields/Attendee__c.field-meta.xml
<CustomField>
    <fullName>Attendee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Attendee record associated with this registration</description>
    <label>Attendee</label>
    <referenceTo>Attendee__c</referenceTo>
    <relationshipLabel>Registrations</relationshipLabel>
    <relationshipName>Registrations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>