objects/Registration__c/fields/Booking_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Booking_Group_Id__c</fullName>
    <description>Unique identifier grouping multiple ticket registrations made in a single booking session.</description>
    <externalId>true</externalId>
    <label>Booking Group ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>