objects/Registration__c/fields/Feedback_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether feedback has already been submitted for this registration</description>
    <label>Feedback Submitted</label>
    <type>Checkbox</type>
</CustomField>