objects/Registration__c/fields/Registration_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Registration_Date_Time__c</fullName>
    <description>Timestamp when the registration was initiated</description>
    <label>Registration Date/Time</label>
    <type>DateTime</type>
</CustomField>