objects/Registration__c/validationRules/Booked_Price_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Booked_Price_Required</fullName>
    <active>true</active>
    <description>Ensures Booked Price is locked in at registration creation.</description>
    <errorConditionFormula>ISNEW() &amp;&amp; ISBLANK(Booked_Price__c)</errorConditionFormula>
    <errorDisplayField>Booked_Price__c</errorDisplayField>
    <errorMessage>Booked Price is required when creating a registration.</errorMessage>
</ValidationRule>